Sablona novinek: vlastni barvy a Georgia

--- a/frontend-novinky/_frontend-novinky-template.html
+++ b/frontend-novinky/_frontend-novinky-template.html
@@ -61,9 +61,9 @@
 			* @style heading 1
 			*/
 			h1{
-				/*@editable*/ color:#202020 !important;
+				/*@editable*/ color:#86835f !important;
 				display:block;
-				/*@editable*/ font-family:Helvetica;
+				/*@editable*/ font-family: georgia,times,"times new roman",serif;
 				/*@editable*/ font-size:26px;
 				/*@editable*/ font-style:normal;
 				/*@editable*/ font-weight:bold;
@@ -83,9 +83,9 @@
 			* @style heading 2
 			*/
 			h2{
-				/*@editable*/ color:#404040 !important;
+				/*@editable*/ color:#86835f !important;
 				display:block;
-				/*@editable*/ font-family:Helvetica;
+				/*@editable*/ font-family:georgia,times,"times new roman",serif;
 				/*@editable*/ font-size:20px;
 				/*@editable*/ font-style:normal;
 				/*@editable*/ font-weight:bold;
@@ -105,9 +105,9 @@
 			* @style heading 3
 			*/
 			h3{
-				/*@editable*/ color:#606060 !important;
+				/*@editable*/ color:#86835f !important;
 				display:block;
-				/*@editable*/ font-family:Helvetica;
+				/*@editable*/ font-family:georgia,times,"times new roman",serif;
 				/*@editable*/ font-size:16px;
 				/*@editable*/ font-style:italic;
 				/*@editable*/ font-weight:normal;
@@ -127,9 +127,9 @@
 			* @style heading 4
 			*/
 			h4{
-				/*@editable*/ color:#808080 !important;
+				/*@editable*/ color:#86835f !important;
 				display:block;
-				/*@editable*/ font-family:Helvetica;
+				/*@editable*/ font-family:georgia,times,"times new roman",serif;
 				/*@editable*/ font-size:14px;
 				/*@editable*/ font-style:italic;
 				/*@editable*/ font-weight:normal;
@@ -161,8 +161,8 @@
 			* @tip Set the styling for your email's preheader text. Choose a size and color that is easy to read.
 			*/
 			.preheaderContent{
-				/*@editable*/ color:#808080;
-				/*@editable*/ font-family:Helvetica;
+				/*@editable*/ color:#86835f;
+				/*@editable*/ font-family:georgia,times,"times new roman",serif;
 				/*@editable*/ font-size:10px;
 				/*@editable*/ line-height:125%;
 				/*@editable*/ text-align:left;
@@ -174,7 +174,7 @@
 			* @tip Set the styling for your email's preheader links. Choose a color that helps them stand out from your text.
 			*/
 			.preheaderContent a:link, .preheaderContent a:visited, /* Yahoo! Mail Override */ .preheaderContent a .yshortcuts /* Yahoo! Mail Override */{
-				/*@editable*/ color:#606060;
+				/*@editable*/ color:#86835f;
 				/*@editable*/ font-weight:normal;
 				/*@editable*/ text-decoration:underline;
 			}
@@ -197,8 +197,8 @@
 			* @tip Set the styling for your email's header text. Choose a size and color that is easy to read.
 			*/
 			.headerContent{
-				/*@editable*/ color:#505050;
-				/*@editable*/ font-family:Helvetica;
+				/*@editable*/ color:#86835f;
+				/*@editable*/ font-family:georgia,times,"times new roman",serif;
 				/*@editable*/ font-size:20px;
 				/*@editable*/ font-weight:bold;
 				/*@editable*/ line-height:100%;
@@ -216,7 +216,7 @@
 			* @tip Set the styling for your email's header links. Choose a color that helps them stand out from your text.
 			*/
 			.headerContent a:link, .headerContent a:visited, /* Yahoo! Mail Override */ .headerContent a .yshortcuts /* Yahoo! Mail Override */{
-				/*@editable*/ color:#EB4102;
+				/*@editable*/ color:#86835f;
 				/*@editable*/ font-weight:normal;
 				/*@editable*/ text-decoration:underline;
 			}
@@ -246,8 +246,8 @@
 			* @theme main
 			*/
 			.bodyContent{
-				/*@editable*/ color:#505050;
-				/*@editable*/ font-family:Helvetica;
+				/*@editable*/ color:#48440e;
+				/*@editable*/ font-family:georgia,times,"times new roman",serif;
 				/*@editable*/ font-size:14px;
 				/*@editable*/ line-height:150%;
 				padding-top:20px;
@@ -263,7 +263,7 @@
 			* @tip Set the styling for your email's main content links. Choose a color that helps them stand out from your text.
 			*/
 			.bodyContent a:link, .bodyContent a:visited, /* Yahoo! Mail Override */ .bodyContent a .yshortcuts /* Yahoo! Mail Override */{
-				/*@editable*/ color:#EB4102;
+				/*@editable*/ color:#5fa316;
 				/*@editable*/ font-weight:normal;
 				/*@editable*/ text-decoration:underline;
 			}
@@ -294,8 +294,8 @@
 			* @theme footer
 			*/
 			.footerContent{
-				/*@editable*/ color:#808080;
-				/*@editable*/ font-family:Helvetica;
+				/*@editable*/ color:#86835f;
+				/*@editable*/ font-family:georgia,times,"times new roman",serif;
 				/*@editable*/ font-size:10px;
 				/*@editable*/ line-height:150%;
 				padding-top:20px;
@@ -311,7 +311,7 @@
 			* @tip Set the styling for your email's footer links. Choose a color that helps them stand out from your text.
 			*/
 			.footerContent a:link, .footerContent a:visited, /* Yahoo! Mail Override */ .footerContent a .yshortcuts, .footerContent a span /* Yahoo! Mail Override */{
-				/*@editable*/ color:#606060;
+				/*@editable*/ color:#86835f;
 				/*@editable*/ font-weight:normal;
 				/*@editable*/ text-decoration:underline;
 			}
