Sablona novinek: barvy pozadi a ramecku

--- a/frontend-novinky/_frontend-novinky-template.html
+++ b/frontend-novinky/_frontend-novinky-template.html
@@ -32,7 +32,7 @@
 			* @theme page
 			*/
 			body, #bodyTable{
-				/*@editable*/ background-color:#DEE0E2;
+				/*@editable*/ background-color:#E3E3E3;
 			}
 
 			/**
@@ -42,7 +42,7 @@
 			* @theme page
 			*/
 			#bodyCell{
-				/*@editable*/ border-top:4px solid #BBBBBB;
+				/*@editable border-top:4px solid #b5b296; */
 			}
 
 			/**
@@ -51,7 +51,7 @@
 			* @tip Set the border for your email.
 			*/
 			#templateContainer{
-				/*@editable*/ border:1px solid #BBBBBB;
+				/*@editable*/ border:1px solid #b5b296;
 			}
 
 			/**
@@ -152,7 +152,7 @@
 			*/
 			#templatePreheader{
 				/*@editable*/ background-color:#F4F4F4;
-				/*@editable*/ border-bottom:1px solid #CCCCCC;
+				/*@editable*/ border-bottom:1px solid #b5b296;
 			}
 
 			/**
@@ -188,7 +188,7 @@
 			#templateHeader{
 				/*@editable*/ background-color:#F4F4F4;
 				/*@editable*/ border-top:1px solid #FFFFFF;
-				/*@editable*/ border-bottom:1px solid #CCCCCC;
+				/*@editable*/ border-bottom:1px solid #b5b296;
 			}
 
 			/**
@@ -236,7 +236,7 @@
 			#templateBody{
 				/*@editable*/ background-color:#F4F4F4;
 				/*@editable*/ border-top:1px solid #FFFFFF;
-				/*@editable*/ border-bottom:1px solid #CCCCCC;
+				/*@editable*/ border-bottom:1px solid #b5b296;
 			}
 
 			/**
