Frontend novinky #3: cesty k obrazkum na Mailchimp serveru

--- a/frontend-novinky/frontend-novinky-03.html
+++ b/frontend-novinky/frontend-novinky-03.html
@@ -474,7 +474,7 @@ Email se nezobrazuje dobře?<br /><a href="*|ARCHIVE|*" target="_blank">Otevřet
                                 	<!-- BEGIN HEADER // -->
                                     <table border="0" cellpadding="0" cellspacing="0" width="100%" id="templateHeader">
                                         <tr>
-                                            <td valign="top" class="headerContent"><img src="design/frontend-novinky-header.png" style="max-width:600px;" id="headerImage" mc:label="header_image" mc:edit="header_image" mc:allowdesigner mc:allowtext />
+                                            <td valign="top" class="headerContent"><img src="https://gallery.mailchimp.com/d6be2f1899eba6a7651157403/images/75ddf138-d2ae-4015-978f-09eea4998337.png" style="max-width:600px;" id="headerImage" mc:label="header_image" mc:edit="header_image" mc:allowdesigner mc:allowtext />
                                             </td>
                                         </tr>
                                     </table>
@@ -507,7 +507,7 @@ Email se nezobrazuje dobře?<br /><a href="*|ARCHIVE|*" target="_blank">Otevřet
 
 <h2>Lednová a únorová školení</h2>
 
-<p><a href="http://www.vzhurudolu.cz/kurzy"><img src="img-content/vd_skoleni_cloud_outline_small.png" alt="Školení na Vzhůru dolů" style="max-width:560px;" id="bodyImage" mc:label="body_image" mc:edit="body_image" mc:allowtext /></a></p>
+<p><a href="http://www.vzhurudolu.cz/kurzy"><img src="https://gallery.mailchimp.com/d6be2f1899eba6a7651157403/images/f410d5ce-9251-488f-8f30-464a58cceeef.png" alt="Školení na Vzhůru dolů" style="max-width:560px;" id="bodyImage" mc:label="body_image" mc:edit="body_image" mc:allowtext /></a></p>
 
 <p>Od ledna mám vypsané termíny pro <a href="http://www.vzhurudolu.cz/kurzy/webovy-frontend">Dnešní webový frontend</a>, <a href="http://www.vzhurudolu.cz/kurzy/responzivni-webdesign">Responzivní webdesign</a> i <a href="http://www.vzhurudolu.cz/kurzy/bootstrap">Bootstrap</a>, které vám dají potřebnou orientaci v titulních problematikách. Rikiho <a href="http://www.vzhurudolu.cz/kurzy/grunt-gulp">Grunt&amp;Gulp automatizace</a> vám zase ušetří spoustu práce a od Robina se zase dozvíte základy nesmírně populárního <a href="http://www.vzhurudolu.cz/kurzy/angular">AngularJS</a>.</p>
 
@@ -544,7 +544,7 @@ Email se nezobrazuje dobře?<br /><a href="*|ARCHIVE|*" target="_blank">Otevřet
 
 <p>Mám za sebou několikatýdenní zkušenost s <a href="https://atom.io/">Atomem</a> jako hlavním editorem kódu. Pokud neznáte, je to vlastně volné pokračování <a href="http://www.sublimetext.com/">SublimeText</a>, jen od lidí stojících za GitHubem. Výsledek?</p>
 
-<p><img src="img-content/atom-editor_small.jpeg" style="max-width:560px;" id="bodyImage" mc:label="body_image" mc:edit="body_image" mc:allowtext /></p>
+<p><img src="https://gallery.mailchimp.com/d6be2f1899eba6a7651157403/images/6cf93787-f23c-41a9-9bea-9c3e71578f3e.jpeg" style="max-width:560px;" id="bodyImage" mc:label="body_image" mc:edit="body_image" mc:allowtext /></p>
 
 <p>Vrátil jsem se k Sublime.</p>
 
