Frontend novinky #3: drobne fixy

--- a/frontend-novinky/frontend-novinky-03.html
+++ b/frontend-novinky/frontend-novinky-03.html
@@ -515,7 +515,7 @@ Email se nezobrazuje dobře?<br /><a href="*|ARCHIVE|*" target="_blank">Otevřet
 
 <h2>Témata, která by vás neměla minout</h2>
 
-<p>iPhone 6+ a mnoho Android phabletů před ním otevřel otázku jak budou lidé ovládat velké smartphony? <a href="https://twitter.com/adlo/status/529915414810460160">Prý upřednostňují dvě ruce</a> a na ovládání palcem se autoři webů nemusí soustředit. Ano, co jiného jim také zbývá. Položme si ale otázku jak by velké smartphony lidé drželi, kdyby šla uživatelská rozhraní palcem ovládat. Ehm, <a href="https://www.youtube.com/watch?v=tqx5ANqFFiU">Androide</a>?</p>
+<p>iPhone 6+ a mnoho Android phabletů před ním otevřelo otázku jak budou lidé ovládat velké smartphony. <a href="https://twitter.com/adlo/status/529915414810460160">Prý upřednostňují dvě ruce</a> a na ovládání palcem se autoři webů nemusí soustředit. Ano, co jiného jim také zbývá. Položme si ale otázku jak by velké smartphony lidé drželi, kdyby šla uživatelská rozhraní palcem ovládat. Ehm, <a href="https://www.youtube.com/watch?v=tqx5ANqFFiU">Androide</a>?</p>
 
 <p>Jak prohlížeče vykreslují stránku, co je to paint, reflow a proč jsou parallax weby tak pomalé? Bohumil Jahoda v češtině:  <a href="http://jecas.cz/vykreslovani">http://jecas.cz/vykreslovani</a>. Mrkněte také na <a href="http://csstriggers.com/">http://csstriggers.com/</a>.</p>
 
@@ -600,7 +600,7 @@ Email se nezobrazuje dobře?<br /><a href="*|ARCHIVE|*" target="_blank">Otevřet
                                         </tr>
                                         <tr>
                                             <td valign="top" class="footerContent" style="padding-top:0;" mc:edit="footer_content02">
-<a href="*|UNSUB|*">odhlásit</a>&nbsp;&nbsp;&nbsp;<a href="*|UPDATE_PROFILE|*">změnit email nebo jméno</a>&nbsp;
+<a href="*|UNSUB|*">odhlásit</a> &nbsp;&nbsp;&nbsp;<a href="*|UPDATE_PROFILE|*">změnit email nebo jméno</a>&nbsp;
 
 <br /><br />
 
