Skoleni #4 - vetsi pismo, vetsi padding + drobnosti v obsahu

--- a/skoleni/skoleni-04.html
+++ b/skoleni/skoleni-04.html
@@ -250,10 +250,10 @@
 				/*@editable*/ font-family:georgia,times,"times new roman",serif;
 				/*@editable*/ font-size:16px;
 				/*@editable*/ line-height:150%;
-				padding-top:20px;
-				padding-right:20px;
-				padding-bottom:20px;
-				padding-left:20px;
+				padding-top:25px;
+				padding-right:25px;
+				padding-bottom:25px;
+				padding-left:25px;
 				/*@editable*/ text-align:left;
 			}
 
@@ -488,7 +488,7 @@ Email se nezobrazuje dobře?<br /><a href="*|ARCHIVE|*" target="_blank">Otevřet
                                         <tr>
                                             <td valign="top" class="bodyContent" mc:edit="body_content00">
 
-<h1>Lednová a únorová frontend školení</h1>
+<h1>Vylepši svůj frontend zdroják</h1>
 
 <p>Ahoj, milý účastníku frontend školení,</p>
 
@@ -496,7 +496,7 @@ Email se nezobrazuje dobře?<br /><a href="*|ARCHIVE|*" target="_blank">Otevřet
 
 <p>Všechny se přestěhovaly do profesionálních školících prostor v KC Greenpoint a všechny jsou nově celodenní.</p>
 
-<p>Týká se to i dříve půldenního kurzu Rikiho Fridricha, kde teď budete mít více času automatizační technologie sami vyzkoušet. Riki se už netočí jen kolem Gruntu, ale plnohodnotně <strong>ukazuje i mnohými upřednostňovaný Gulp</strong>. <a href="http://www.vzhurudolu.cz/kurzy/grunt-gulp/112">Grunt.js, Gulp.js nebo Bower se můžeš naučit 26. února.</a></p>
+<p>Týká se to i dříve půldenního kurzu Rikiho Fridricha, kde teď budete mít více času automatizační technologie sami vyzkoušet. Riki se už netočí jen kolem Gruntu, ale plnohodnotně <strong>ukazuje i mnohými upřednostňovaný Gulp</strong>. <a href="http://www.vzhurudolu.cz/kurzy/grunt-gulp/112">Grunt.js, Gulp.js nebo Bower se můžeš naučit 24. února.</a></p>
 
 <p>Už příští čtvrtek si můžeš přijít udělat rozhled nad aktuálními postupy a technologiemi na frontendu. Prolítneme <strong>SVG, CSS preprocesory, úžasný layoutovací modul Flexbox</strong> a mnohé další. <a href="http://www.vzhurudolu.cz/kurzy/webovy-frontend/105">Dnešní webový frontend už 22. ledna v KC Greenpoint</a>.</p>
 
