Frontend novinky - upravy v sablone…
- fix radkovani nadpisu
- <small> deklarace
- odstraneni prvni radky paticky, radeji resime textem

--- a/frontend-novinky/frontend-novinky-05.html
+++ b/frontend-novinky/frontend-novinky-05.html
@@ -67,7 +67,7 @@
 				/*@editable*/ font-size:26px;
 				/*@editable*/ font-style:normal;
 				/*@editable*/ font-weight:bold;
-				/*@editable*/ line-height:100%;
+				/*@editable*/ line-height:1.3;
 				/*@editable*/ letter-spacing:normal;
 				margin-top:0;
 				margin-right:0;
@@ -89,7 +89,7 @@
 				/*@editable*/ font-size:20px;
 				/*@editable*/ font-style:normal;
 				/*@editable*/ font-weight:bold;
-				/*@editable*/ line-height:100%;
+				/*@editable*/ line-height:1.3;
 				/*@editable*/ letter-spacing:normal;
 				margin-top:25px;
 				margin-right:0;
@@ -140,6 +140,11 @@
 				margin-bottom:10px;
 				margin-left:0;
 				/*@editable*/ text-align:left;
+			}
+
+			small {
+				font-size: .75em;
+				line-height: 1.3;
 			}
 
 			/* ========== Header Styles ========== */
@@ -347,7 +352,6 @@
 				*/
 				h1{
 					/*@editable*/ font-size:24px !important;
-					/*@editable*/ line-height:100% !important;
 				}
 
 				/**
@@ -357,7 +361,6 @@
 				*/
 				h2{
 					/*@editable*/ font-size:20px !important;
-					/*@editable*/ line-height:100% !important;
 				}
 
 				/**
@@ -367,7 +370,6 @@
 				*/
 				h3{
 					/*@editable*/ font-size:18px !important;
-					/*@editable*/ line-height:100% !important;
 					margin-bottom: 4px;
 				}
 
@@ -378,7 +380,6 @@
 				*/
 				h4{
 					/*@editable*/ font-size:16px !important;
-					/*@editable*/ line-height:100% !important;
 				}
 
 				/* ======== Header Styles ======== */
@@ -534,9 +535,10 @@ Email se nezobrazuje dobře?<br /><a href="*|ARCHIVE|*" target="_blank">Otevřet
 
 <p>A to je vše, přátelé. Přejeme hezký listopad!</p>
 
-<p>Martin Michálek (<a href="http://www.twitter.com/machal">@machal</a>) &amp; Martin Pešout (<a href="http://www.twitter.com/martinpesout">@machal</a>)</p>
+<p>Martin Michálek (<a href="http://www.twitter.com/machal">@machal</a>) 
+<br>&amp;&nbsp;Martin&nbsp;Pešout (<a href="http://www.twitter.com/martinpesout">@martinpesout</a>)</p>
 
-<p>PS: Články VzhůruDolů.cz můžete odebírat také přes <a href="http://www.vzhurudolu.cz/rss">RSS</a>, na  <a href="https://www.facebook.com/VzhuruDolu">Facebooku</a>, <a href="https://plus.google.com/b/109221560773963108322/+VzhurudoluCz/posts">Google</a>+ nebo <a href="http://www.twitter.com/vzhurudolu">Twitteru</a>.</p>
+<p><small>PS: Články VzhůruDolů.cz můžete odebírat také přes <a href="http://www.vzhurudolu.cz/rss">RSS</a>, na  <a href="https://www.facebook.com/VzhuruDolu">Facebooku</a>, <a href="https://plus.google.com/b/109221560773963108322/+VzhurudoluCz/posts">Google</a>+ nebo <a href="http://www.twitter.com/vzhurudolu">Twitteru</a>.</small></p>
 
 
 
@@ -551,11 +553,6 @@ Email se nezobrazuje dobře?<br /><a href="*|ARCHIVE|*" target="_blank">Otevřet
                             	<td align="center" valign="top">
                                 	<!-- BEGIN FOOTER // -->
                                     <table border="0" cellpadding="0" cellspacing="0" width="100%" id="templateFooter">
-                                        <tr>
-                                            <td valign="top" class="footerContent" mc:edit="footer_content00">
-<a href="*|TWITTER:PROFILEURL|*">Twitter</a>&nbsp;&nbsp;&nbsp;<a href="*|FACEBOOK:PROFILEURL|*">Facebook</a>&nbsp;&nbsp;&nbsp;<a href="*|FORWARD|*">Přeposlat email</a>&nbsp;
-                                            </td>
-                                        </tr>
                                         <tr>
                                             <td valign="top" class="footerContent" style="padding-top:0;" mc:edit="footer_content01">
 <em>Obsah je publikován pod Creative Commons licencí Uveďte autora, neužívejte komerčně 3.0 Česko.</em>
