Frontend novinky - upravy v sablone…
- odkaz muze byt <strong>
- mirnejsi odsazeni seznamu zleva

--- a/frontend-novinky/frontend-novinky-05.html
+++ b/frontend-novinky/frontend-novinky-05.html
@@ -180,7 +180,7 @@
 			*/
 			.preheaderContent a:link, .preheaderContent a:visited, /* Yahoo! Mail Override */ .preheaderContent a .yshortcuts /* Yahoo! Mail Override */{
 				/*@editable*/ color:#86835f;
-				/*@editable*/ font-weight:normal;
+				/* font-weight:normal;*/
 				/*@editable*/ text-decoration:underline;
 			}
 
@@ -222,7 +222,7 @@
 			*/
 			.headerContent a:link, .headerContent a:visited, /* Yahoo! Mail Override */ .headerContent a .yshortcuts /* Yahoo! Mail Override */{
 				/*@editable*/ color:#86835f;
-				/*@editable*/ font-weight:normal;
+				/* font-weight:normal; */
 				/*@editable*/ text-decoration:underline;
 			}
 
@@ -269,7 +269,7 @@
 			*/
 			.bodyContent a:link, .bodyContent a:visited, /* Yahoo! Mail Override */ .bodyContent a .yshortcuts /* Yahoo! Mail Override */{
 				/*@editable*/ color:#5fa316;
-				/*@editable*/ font-weight:normal;
+				/*font-weight:normal;*/
 				/*@editable*/ text-decoration:underline;
 			}
 
@@ -277,6 +277,11 @@
 				display:inline;
 				height:auto;
 				max-width:560px;
+			}
+
+			.bodyContent ul,
+			.bodyContent ol {
+				padding-left: 20px;
 			}
 
 			/* ========== Footer Styles ========== */
