Frontend novinky #5 - drobnosti v textu a stylu

--- a/frontend-novinky/frontend-novinky-05.html
+++ b/frontend-novinky/frontend-novinky-05.html
@@ -239,7 +239,7 @@
 			* @tip Set the background color and borders for your email's body area.
 			*/
 			#templateBody{
-				/*@editable*/ background-color:#F4F4F4;
+				/*@editable*/ background-color:#ffffff;
 				/*@editable*/ border-top:1px solid #FFFFFF;
 				/*@editable*/ border-bottom:1px solid #b5b296;
 			}
@@ -499,21 +499,21 @@ Email se nezobrazuje dobře?<br /><a href="*|ARCHIVE|*" target="_blank">Otevřet
 
 <p>Vítejte u dalšího vydání frontend novinek, přátelé. Čekali jste dlouho, viďte? Další čísla chceme produkovat častěji, i proto má tohle vydání poprvé dva autory – nově jej pro vás připravujeme v tandemu s <a href="http://www.martinpesout.cz/">Martinem Pešoutem</a>.</p>
 
-<h2>React pro vývojáře uživatelského rozhraní</h2>
+<h2>React a Frontendisti</h2>
 
-<p>Pro listopadový sraz Frontendistů jsme vybrali výbušné téma – React. Tato knihovna pro vytváření webových komponent zažívá v poslední době nebývalý rozmach. Pokud například pracujete na webových aplikacích, může být právě React pro vás tou správnou volbou. Frontendisti se na tuhle kometu pokusí podívat trochu jiným dalekohledem, než to se obvykle dělává. Takže pokud ještě nemáte nic v plánu, šup s 19. listopadem do kalendáře a hlavně doražte: <a href="http://srazy.info/frontendisti/5908">srazy.info/frontendisti/5908</a></p>
+<p>Pro listopadový sraz Frontendistů jsme vybrali výbušné téma – React. Tato knihovna pro vytváření webových komponent zažívá v poslední době nebývalý rozmach. Pokud například pracujete na webových aplikacích, může být právě React pro vás tou správnou volbou. Frontendisti se na tuhle kometu pokusí podívat trochu jiným dalekohledem, než to se obvykle dělává. Takže pokud ještě nemáte nic v plánu, <a href="http://srazy.info/frontendisti/5908">šup s 19. listopadem do kalendáře a hlavně doražte</a>.</p>
 
 <h2>Videa z Webexpo jsou venku</h2>
 
-<p>Neměli jste šanci být na letošní konferenci Webexpo 2015 v Praze nebo vám některá z přednášek unikla? Podzimní sychravé večery si můžete zpříjemnit záznamy přednášek, které jsou k dispozici spolu se slajdy na <a href="http://webexpo.cz/videa/2015/">webexpo.cz/videa/2015/</a></p>
+<p>Neměli jste šanci být na letošní konferenci Webexpo 2015 v Praze nebo vám některá z přednášek unikla? Podzimní sychravé večery si můžete zpříjemnit záznamy přednášek, které jsou k dispozici spolu se slajdy. <a href="http://webexpo.cz/videa/2015/">Podívejte se na ně</a>.</p>
 
 <h2>Je navigace s ikonou hamburgeru opravdu dobrý nápad? Počkejte, opravdu?</h2>
 
-<p>V letošním roce zrušilo několik velkých služeb svou mobilní navigaci schovanou za hamburgerovou ikonku. Příkladem může být třeba služba YouTube. Důvodem je, že uživatelé nevidí důležité odkazy přímo a musí mobilní navigaci nejprve otevřít a celou prozkoumat. Tento článek rozebírá možné důvody a přidává i několik názorných ukázek: <a href="http://deep.design/the-hamburger-menu/">deep.design/the-hamburger-menu/</a></p>
+<p>V letošním roce zrušilo několik velkých služeb svou mobilní navigaci schovanou za hamburgerovou ikonku. Příkladem může být třeba služba YouTube. Důvodem je, že uživatelé nevidí důležité odkazy přímo a musí mobilní navigaci nejprve otevřít a celou prozkoumat. <a href="http://deep.design/the-hamburger-menu/">James Archer rozebírá problematiku ze všech stran</a>.</p>
 
 <h2>Vše o cookie liště</h2>
 
-<p>Tvůrci webů v České republice si od října musí dávat pozor a v některých případech si musí od svých návštěvníků vyžádat souhlas s ukládáním cookies. Pozor, netýká se to běžně instalovaných Google Analytics. A není to kvůli EU, ale kvůli Google. Chcete další informace? Nejprve si <a href="http://www.vzhurudolu.cz/blog/36-eu-cookies">přečtěte Martinův článek</a> a pak názory <a href="https://phpfashion.com/jak-na-souhlas-s-cookie-v-eu">Davida Grudla</a> a <a href="http://www.lupa.cz/clanky/na-posledni-chvili-jak-na-web-dostat-souhlas-s-pouzivanim-cookies/">Michala Vojáka</a>.</p>
+<p>Tvůrci webů v České republice od října musí v některých případech od svých návštěvníků vyžádat souhlas s ukládáním cookies. Pozor, netýká se to běžně instalovaných Google Analytics. A není to kvůli EU, ale kvůli Google. Chcete další informace? Nejprve si <a href="http://www.vzhurudolu.cz/blog/36-eu-cookies">přečtěte Martinův článek</a> a pak názory <a href="https://phpfashion.com/jak-na-souhlas-s-cookie-v-eu">Davida Grudla</a> a <a href="http://www.lupa.cz/clanky/na-posledni-chvili-jak-na-web-dostat-souhlas-s-pouzivanim-cookies/">Michala Vojáka</a>.</p>
 
 <h2>Rychlé tipy a triky</h2>
 
