Frontend novinky #5 - obrazky

--- a/frontend-novinky/frontend-novinky-05.html
+++ b/frontend-novinky/frontend-novinky-05.html
@@ -501,6 +501,9 @@ Email se nezobrazuje dobře?<br /><a href="*|ARCHIVE|*" target="_blank">Otevřet
 
 <h2>React a Frontendisti</h2>
 
+<p>
+<a href="http://srazy.info/frontendisti/5908"><img src="https://gallery.mailchimp.com/d6be2f1899eba6a7651157403/images/eebecde7-a600-466d-be34-3d18d7e5e9e7.jpg" height="309" alt="React a Frontendisti"></a></p>
+
 <p>Pro listopadový sraz Frontendistů jsme vybrali výbušné téma – React. Tato knihovna pro vytváření webových komponent zažívá v poslední době nebývalý rozmach. Pokud například pracujete na webových aplikacích, může být právě React pro vás tou správnou volbou. Frontendisti se na tuhle kometu pokusí podívat trochu jiným dalekohledem, než to se obvykle dělává. Takže pokud ještě nemáte nic v plánu, <a href="http://srazy.info/frontendisti/5908">šup s 19. listopadem do kalendáře a hlavně doražte</a>.</p>
 
 <h2>Videa z Webexpo jsou venku</h2>
@@ -527,10 +530,16 @@ Email se nezobrazuje dobře?<br /><a href="*|ARCHIVE|*" target="_blank">Otevřet
 </ul>
 
 
-<h2>Co důležitého se dělo na VzhůruDolů.cz zatímco  newsletter nepřicházel a nepřicházel?</h2>
+<h2>Nově na VzhůruDolů: <a href="http://www.vzhurudolu.cz/blog/40-amp">Můj pohled na Accelerated Mobile Pages</a></h2>
+
+<p>Moc zajímavá iniciativa Google pro zrychlení zobrazování obsahových webů. Myslím, že opravuje, ale zároveň trochu rozbíjí Web.</p>
+
+<p>
+<a href="http://www.vzhurudolu.cz/blog/40-amp"><img src="https://gallery.mailchimp.com/d6be2f1899eba6a7651157403/images/3a441133-1b16-478b-98d4-141fa4ffaf08.jpg" height="309" alt="AMP"></a></p>
+
+<h3>Také stojí za přečtení:</h3>
 
 <ul>
-<li><strong><a href="http://www.vzhurudolu.cz/blog/40-amp">Můj pohled na Accelerated Mobile Pages</a></strong>, moc zajímavou iniciativu Google pro zrychlení zobrazování obsahových webů.</li>
 <li><strong><a href="http://www.vzhurudolu.cz/blog/38-design-v-prohlizeci">Design webů v prohlížeči</a></strong> – přepis přednášky o mém postupu navrhování webů. Možné vidět i <a href="webexpo.cz/praha2015/prednaska/designovani-webu-v-prohlizeci/">jako video</a>.</li>
 <li><strong><a href="http://www.vzhurudolu.cz/prirucka/mobile-first">Co je to „Mobile First“?</a></strong> – Ale doopravdy. A do hloubky.</li>
 <li><strong><a href="http://www.vzhurudolu.cz/blog/35-critical-css">Critical CSS</a></strong> – způsob jak velmi urychlit zobrazení stránky na pomalých připojeních. Také <a href="http://www.vzhurudolu.cz/prednaska/frontendisticz-critical-css-144">jako video</a>.</li>
@@ -543,7 +552,7 @@ Email se nezobrazuje dobře?<br /><a href="*|ARCHIVE|*" target="_blank">Otevřet
 <p>Martin Michálek (<a href="http://www.twitter.com/machal">@machal</a>) 
 <br>&amp;&nbsp;Martin&nbsp;Pešout (<a href="http://www.twitter.com/martinpesout">@martinpesout</a>)</p>
 
-<p><small>PS: Články VzhůruDolů.cz můžete odebírat také přes <a href="http://www.vzhurudolu.cz/rss">RSS</a>, na  <a href="https://www.facebook.com/VzhuruDolu">Facebooku</a>, <a href="https://plus.google.com/b/109221560773963108322/+VzhurudoluCz/posts">Google</a>+ nebo <a href="http://www.twitter.com/vzhurudolu">Twitteru</a>.</small></p>
+<p><small>PS: Články VzhůruDolů.cz můžete odebírat také přes <a href="http://feeds.feedburner.com/vzhurudolu">RSS</a>, na  <a href="https://www.facebook.com/VzhuruDolu">Facebooku</a>, <a href="https://plus.google.com/b/109221560773963108322/+VzhurudoluCz/posts">Google</a>+ nebo <a href="http://www.twitter.com/vzhurudolu">Twitteru</a>.</small></p>
 
 
 
