Frontend novinky #6 - pridani obrazku

--- a/frontend-novinky/frontend-novinky-06.html
+++ b/frontend-novinky/frontend-novinky-06.html
@@ -513,6 +513,10 @@ Email se nezobrazuje dobře?<br /><a href="*|ARCHIVE|*" target="_blank">Otevřet
 
 <h2>Končí podpora starších IE</h2>
 
+<p>
+	<img src="https://gallery.mailchimp.com/d6be2f1899eba6a7651157403/images/246abc55-aa2f-4ecd-bc40-563d12e2cd22.jpg" alt="Končí podpora starších IE" height="309">
+</p>
+
 <p><a href="https://www.microsoft.com/en-us/WindowsForBusiness/End-of-IE-support">Microsoft oznámil</a>, že 12. ledna 2016 ukončí podporu starších prohlížečů Internet Explorer, tedy kromě IE11. Pro webové vývojáře to ale bude něco znamenat až ve chvíli, kdy starší Explorery zmizí ze statistik návštěvnosti. A to bude ještě mnoho měsíců trvat. Pokud ale chceme konec podpory MSIE brát jako dobrou zprávu, nic vám nebrání. Radujme se společně na <a href="http://meowni.ca/is-ie10-dead/">IE10 countdown</a>.</p>
 
 <h2>Rychlé tipy a triky</h2>
