Novinky #07 - pridany obrazky, cast o SVG skoleni pryc, opraveny nektere formulace

--- a/frontend-novinky/frontend-novinky-07.html
+++ b/frontend-novinky/frontend-novinky-07.html
@@ -499,13 +499,17 @@ Email se nezobrazuje dobře?<br /><a href="*|ARCHIVE|*" target="_blank">Otevřet
 
 <h2>1) Javascriptový boom - React, isomorfní appky a spol.</h2>
 
-<p>Pro invazi JS ekosystému loni dorazilo mnoho nových posil. Pobláznění Reactem je jen jeden z projevů nevyhnutelného nástupu Javascriptu na trůn. Ovšem jen u webových aplikací, protože&hellip;</p>
+<p>Pro invazi JS ekosystému loni dorazilo mnoho nových posil. Pobláznění Reactem je jen jeden z projevů nevyhnutelného nástupu Javascriptu na trůn.</p>
 
 <h2>2) Weby a webové aplikace jsou si ještě vzdálenější</h2>
 
-<p>React, Browserify, Webpack, CssModules&hellip; tohle všechno je skvělé. Pro webové aplikace. Pokud ale vyrábíte vyhledávačem indexovatelné statické weby, novinky javascriptového ekosystému až tak neoceníte. Potřebujete Javascript na serveru nebo totální závislost na frontendovém JS. Obojí je pro existující obsahové weby těžce zchůdné. Do budoucna je možné čekat, že současné webařské technologické ekosystémy (PHP, Rails&hellip;) převezmou leccos z aktuálního vývoje kolem Javascriptu. A ti co mohou, půjdou i u obsahových webů do izomorfního přístupu &#8212 JS na frontendu i backendu. Do té doby vězte, že za jQuery se u statických webů stydět nemusíte. Nástroje pro tvorbu webů a webových aplikací si nikdy nebyly dál a to jsme ještě neskončili.</p>
+<p>React, Browserify, Webpack, CssModules&hellip; tohle všechno je skvělé, ale hlavně webové aplikace. Pokud vyrábíte vyhledávačem indexovatelné statické weby, novinky javascriptového ekosystému až tak neoceníte. Potřebujete Javascript na serveru nebo totální závislost na frontendovém JS. Obojí je pro existující obsahové weby těžce zchůdné. Do budoucna je možné čekat, že současné webařské technologické ekosystémy (PHP, Rails&hellip;) převezmou leccos z aktuálního vývoje kolem Javascriptu. A ti co mohou, půjdou i u obsahových webů do izomorfního přístupu &#8212 JS na frontendu i backendu. Do té doby vězte, že za jQuery se u statických webů stydět nemusíte. Nástroje pro tvorbu webů a webových aplikací si nikdy nebyly dál a to jsme ještě neskončili.</p>
 
 <h2>3) Adobe Comet</h2>
+
+<p>
+	<a href="http://landing.adobe.com/en/na/products/creative-cloud/comet/229818-notifyme.html"><img src="https://gallery.mailchimp.com/d6be2f1899eba6a7651157403/images/ebae8cc6-b507-45e0-b340-f6193407729c.jpg" alt="Adobe Comet" width="530" height="298"></a>
+</p>
 
 <p>Naprosto pochopitelný úkrok od Photoshopu jako nástroje pro webdesign pokračuje. Blížíme se do cílové rovinky? Po přechodu velké části designérů na Sketch, po ukončení vývoje Fireworks, po letech čtení Photoshop hejtů… Po tom všem loni Adobe přišlo s demem nástroje pro komplexní návrh UX. Zatím ho nelze hodnotit, ale <a href="http://landing.adobe.com/en/na/products/creative-cloud/comet/229818-notifyme.html">vypadá skvěle</a> a hlavně nám ukazuje, že od Photoshopu nás chce osvobodit i jeho mateřská firma. Doufejme, že to nebude jen kometa.</p>
 
@@ -544,17 +548,19 @@ Email se nezobrazuje dobře?<br /><a href="*|ARCHIVE|*" target="_blank">Otevřet
 	<li><strong><a href="https://www.youtube.com/watch?v=2vFrZXWiwIc">VIDEO 2: Troubleshooting rendering performance issues</a></strong>. Užitečné video z dílny Harry Robertse skvěle popisuje možnosti Chrome DevTools při odkrývání problémů ve vykreslování webu. Zapněte si „Enable Paint Flashing” a sledujte co se překresluje např. během scrollování.</li>
 </ul>
 
-<h2>Nové školení: SVG</h2>
+<h2>Všechna školení mají nové termíny</h2>
 
-<p><em>TODO IMG</em></p>
+<p><a href="http://www.vzhurudolu.cz/kurzy"><img src="https://gallery.mailchimp.com/d6be2f1899eba6a7651157403/images/f410d5ce-9251-488f-8f30-464a58cceeef.png" alt="Všechna školení mají nové termíny"></a></p>
 
-<p>SVG má ohromný potenciál a na tomhle školení se ho naučíte pořádně do hloubky. Školení vede Michal Matuška, senior vývojář u SuperKodérů. Opět v pražském KC Greenpoint.</p>
+<p>Všechna školení mají nové termíny. <a href="http://www.vzhurudolu.cz/kurzy">Naučit se něco nového</a> můžete už od konce ledna.</p>
 
-<p class="text-center">
-	<a href="/kurzy/svg#objednavka" class="button">Objednat místo na SVG školení</a>
-</p>
+<h2>Co je ještě nového na VzhůruDolů.cz?</h2>
 
-<p>A pozor, nové termíny všech kurzů <a href="http://www.vzhurudolu.cz/kurzy">začínají už koncem ledna</a>.</p>
+<ul>	
+	<li><a href="http://www.vzhurudolu.cz/ebook">Ebook „Vzhůru do CSS3“ dostal novou aktualizaci</a>. Verzi 1.2 a s ní taky vylepšený prezentační web.</li>
+	<li><a href="http://www.vzhurudolu.cz/prirucka/nastroje">Nástroje frontend kodéra</a> a <a href="http://www.vzhurudolu.cz/prirucka/nastroje-filozofie">zdrženlivá filozofie přístupu k nim</a>.</li>
+	<li>… a <a href="http://www.vzhurudolu.cz/blog/44-top-5-2015">5 nejčtenějších článků roku 2015</a>.</li>
+</ul>
 
 <p>Do Nového roku přejeme hodně sil a spoustu příjemných projektů.</p>
 
