--- a/skoleni/skoleni-09-js.html
+++ b/skoleni/skoleni-09-js.html
@@ -478,7 +478,7 @@
                                     <table border="0" cellpadding="0" cellspacing="0" width="100%" id="templatePreheader">
                                         <tr>
                                             <td valign="top" class="preheaderContent" style="padding-top:10px; padding-right:100px; padding-bottom:10px; padding-left:20px;" mc:edit="preheader_content00">
-Javascript jako jazyk konečně pořádně
+Naučte se Javascript konečně pořádně
                                             </td>
                                             <!-- *|IFNOT:ARCHIVE_PAGE|* -->
                                             <td valign="top" width="180" class="preheaderContent" style="padding-top:10px; padding-right:20px; padding-bottom:10px; padding-left:0;" mc:edit="preheader_content01">
@@ -509,7 +509,7 @@ Email se nezobrazuje dobře?<br /><a href="*|ARCHIVE|*" target="_blank">Otevřet
                                         <tr>
                                             <td valign="top" class="bodyContent" mc:edit="body_content00">
 
-<h1>Javascript jako jazyk konečně pořádně</h1>
+<h1>Naučte se Javascript konečně pořádně</h1>
 
 <p>Status „Lingua franca“ lidé udělují jazyku, který nejvíce ovlivňuje dobu, ve které žijí. Pokud jde o vývoj webů a webových aplikací, svou dnešní <em>lingvu franku</em> jsme myslím našli. Je to Javascript.</p>
 
